--- a/hw11/index.html
+++ b/hw11/index.html
@@ -7,14 +7,12 @@
     <title>SHOPPER</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
+<body class="text_basic">
     <!--Header start-->
     <header class="header">
         <div class="header__menu">
             <div class="header__logo">
-                <div class="header__logo_text">SH</div>
-                <div class="header__logo_text text_blue">O</div>
-                <div class="header__logo_text">PPER</div>
+                <div class="header__logo_text">SH<span class="text_blue">O</span>PPER</div>
             </div>
             <div class="search_form">
                 <input type="text" name="search" class="search-form__field" placeholder="Search for Products">
@@ -24,7 +22,7 @@
                 <button type="log_in">Log in</button>
                 <button type="sign_up">Sign up</button>
                 <a href="" class="header__a"><img src="./images/heart.png" class="header__img"></a>
-                <a href="" class="header__a"><img src="./images/cart.png" class="header__img_cart"></a>
+                <a href="" class="header__a"><img src="./images/cart.png" class="header__img header__img_cart"></a>
             </div>
         </div>
         
@@ -107,7 +105,7 @@
                             <div class="app-form__field_with_desc app-form__field_with_desc_address">    
                                 <div class="text">Phone Number</div>
                                 <input type="text" name="user-phone-number" class="app-form__field" placeholder="">
-                                <div class="text_light">To Validate your account please enter valid mobile Number to receive confirmation code</div>
+                                <div class="text_light text_bottom">To Validate your account please enter valid mobile Number to receive confirmation code</div>
                             </div>
                         </div>
                     </div>
