--- a/hw12/index.html
+++ b/hw12/index.html
@@ -85,8 +85,8 @@
 
     <!--Mini start-->
     <div class="mini-intro">
-        <div class="mini-intro__wrapper">
-            <div class="mini-intro__intro">
+        <ul class="mini-intro__wrapper">
+            <li class="mini-intro__intro">
                 <div class="mini-intro__pic">
                     <img src="./img/headphones2.png" class="">
                 </div>
@@ -99,8 +99,8 @@
                         <button class="button mini-intro__button">Buy now</button>
                     </div>
                 </div>
-            </div>
-            <div class="mini-intro__intro">
+            </li>
+            <li class="mini-intro__intro">
                 <div class="mini-intro__pic">
                     <img src="./img/headphones3.png" class="">
                 </div>
@@ -113,8 +113,8 @@
                         <button class="button mini-intro__button">Buy now</button>
                     </div>
                 </div>
-            </div>
-            <div class="mini-intro__intro">
+            </li>
+            <li class="mini-intro__intro">
                 <div class="mini-intro__pic">
                     <img src="./img/headphones4.png" class="">
                 </div>
@@ -127,8 +127,8 @@
                         <button class="button mini-intro__button">Buy now</button>
                     </div>
                 </div>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
     <!--Mini end-->
 
