--- a/test-html/index.html
+++ b/test-html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Banner Header</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -15,35 +16,33 @@
         <div class="wrapper">
             <div class="header__wrapper">
                 <div class="header__logo">
-                    <a href="" class="header__logo-link">
+                    <a href="#" class="header__logo-link">
                         <img src="./img/svg/logo.svg" alt="Banner Header" class="header__logo-pic">
                     </a>
                 </div>
 
-                <nav class="header__nav">
-                    <ul class="header__list">
-                        <li class="header__item">
-                            <a href="" class="header__link">
-                                <img src="./img/svg/page1.svg" alt="Page1" class="header__logo-pic">
-                            </a>
-                        </li>
-                        <li class="header__item">
-                            <a href="" class="header__link">
-                                <img src="./img/svg/page2.svg" alt="Page2" class="header__logo-pic">
-                            </a>
-                        </li>
-                        <li class="header__item">
-                            <a href="" class="header__link">
-                                <img src="./img/svg/page3.svg" alt="Page3" class="header__logo-pic">
-                            </a>
-                        </li>
-                        <li class="header__item">
-                            <a href="" class="header__link">
-                                <img src="./img/svg/page4.svg" alt="Page4" class="header__logo-pic">
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__link">
+                            <img src="./img/svg/page1.svg" alt="Page1" class="header__logo-pic">
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">
+                            <img src="./img/svg/page2.svg" alt="Page2" class="header__logo-pic">
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">
+                            <img src="./img/svg/page3.svg" alt="Page3" class="header__logo-pic">
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">
+                            <img src="./img/svg/page4.svg" alt="Page4" class="header__logo-pic">
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
@@ -64,10 +63,10 @@
                 </p>
                 <form class="two buttons form">
                     <fieldset class="two_buttons__wrap">
-                        <p class="two_buttoms__info">
+                        <div class="two_buttoms__info">
                             <button type="submit" class="two_buttons__white">white button</button>
                             <button type="submit" class="two_buttons__black">black button</button>
-                        </p>
+                        </div>
                     </fieldset>
                 </form>
             </div>
@@ -201,64 +200,60 @@
             <div class="wrapper">
                 <div class="footer__wrapper">
                     <div class="footer__logo">
-                        <a href="" class="footer__logo-link">
+                        <a href="#" class="footer__logo-link">
                             <img src="./img/svg/logo_footer.svg" alt="Banner Header" class="footer__logo-pic">
                         </a>
                     </div>
                 </div>
                 <div class="footer__wrapper">
-                    <nav class="footer__nav">
-                        <ul class="header__list">
-                            <li class="header__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/page1_footer.svg" alt="Page1_footer" class="footer__logo-pic">
-                                </a>
-                            </li>
-                            <li class="header__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/page2_footer.svg" alt="Page2_footer" class="footer__logo-pic">
-                                </a>
-                            </li>
-                            <li class="header__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/page3_footer.svg" alt="Page3_footer" class="footer__logo-pic">
-                                </a>
-                            </li>
-                            <li class="header__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/page4_footer.svg" alt="Page4_footer" class="footer__logo-pic">
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <ul class="header__list footer__nav">
+                        <li class="header__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/page1_footer.svg" alt="Page1_footer" class="footer__logo-pic">
+                            </a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/page2_footer.svg" alt="Page2_footer" class="footer__logo-pic">
+                            </a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/page3_footer.svg" alt="Page3_footer" class="footer__logo-pic">
+                            </a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/page4_footer.svg" alt="Page4_footer" class="footer__logo-pic">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="footer__nav_after">
                 </div>
                 <div class="footer__wrapper">
-                    <nav class="footer__nav">
-                        <ul class="header__list">
-                            <li class="footer__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/facebook.svg" alt="Facebook" class="footer__logo-pic">
-                                </a>
-                            </li>
-                            <li class="footer__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/instagram.svg" alt="Instagram" class="footer__logo-pic">
-                                </a>
-                            </li>
-                            <li class="footer__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/linkedin.svg" alt="Linkedin" class="footer__logo-pic">
-                                </a>
-                            </li>
-                            <li class="footer__item">
-                                <a href="" class="header__link">
-                                    <img src="./img/svg/twitter.svg" alt="Twitter" class="footer__logo-pic">
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <ul class="header__list footer__nav">
+                        <li class="footer__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/facebook.svg" alt="Facebook" class="footer__logo-pic">
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/instagram.svg" alt="Instagram" class="footer__logo-pic">
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/linkedin.svg" alt="Linkedin" class="footer__logo-pic">
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="header__link">
+                                <img src="./img/svg/twitter.svg" alt="Twitter" class="footer__logo-pic">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
